# rust-pachyderm

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  contributing.md
etc/: fix_protos.sh  travis_before_install.sh  travis_install.sh  travis_setup.sh  travis_test.sh
examples/: hello_world.rs  opencv.rs
fuzz/: Cargo.toml
fuzz/etc/: extract_restore_output.json
fuzz/fuzz_targets/: extract_restore.rs  pfs.rs
proto/client/admin/: admin.proto
proto/client/admin/1_7/auth/: auth.proto
proto/client/admin/1_7/pfs/: pfs.proto
proto/client/admin/1_7/pps/: pps.proto
proto/client/admin/v1_10/auth/: auth.proto
proto/client/admin/v1_10/pfs/: pfs.proto
proto/client/admin/v1_10/pps/: pps.proto
proto/client/admin/v1_7/auth/: auth.proto
proto/client/admin/v1_7/pfs/: pfs.proto
proto/client/admin/v1_7/pps/: pps.proto
proto/client/admin/v1_8/auth/: auth.proto
proto/client/admin/v1_8/pfs/: pfs.proto
proto/client/admin/v1_8/pps/: pps.proto
proto/client/admin/v1_9/auth/: auth.proto
proto/client/admin/v1_9/pfs/: pfs.proto
proto/client/admin/v1_9/pps/: pps.proto
proto/client/auth/: auth.proto
proto/client/pfs/: pfs.proto
proto/client/pkg/config/: config.proto
proto/client/pkg/tracing/extended/: extended_trace.proto
proto/client/pps/: pps.proto
proto/client/transaction/: transaction.proto
src/: lib.rs
