[package]
name = "pachyderm"
version = "0.1.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Pachyderm gRPC client, for working with PFS/PPS"
homepage = "https://pachyderm.io"
license = "Apache-2.0"
repository = "https://github.com/pachyderm/rust-pachyderm"
keywords = ["pachyderm", "kubernetes", "big data", "analytics", "data science"]
categories = ["api-bindings", "science"]

[dependencies]
bytes = "0.4.7"
prost = "0.4.0"
prost-derive = "0.4.0"
prost-types = "0.4.0"
tower-grpc = { path = "tower/tower-grpc", version = "0.1.0" }

[build-dependencies]
failure = "0.1.5"
walkdir = "2"
tower-grpc-build = { path = "tower/tower-grpc/tower-grpc-build", version = "0.1.0" }

[dev-dependencies]
http = "0.1"
tokio = "0.1"
futures = "0.1"
tower-add-origin = { path = "tower/tower-http/tower-add-origin", version = "0.1.0" }
tower-h2 = { path = "tower/tower-h2", version = "0.1.0" }
tower-service = "0.2"
tower-util = { path = "tower/tower/tower-util", version = "0.1.0" }
