[package]
name = "pachyderm"
version = "0.1.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Pachyderm gRPC client, for working with PFS/PPS"
homepage = "https://pachyderm.io"
license = "Apache-2.0"
repository = "https://github.com/pachyderm/rust-pachyderm"
keywords = ["pachyderm", "kubernetes", "big data", "analytics", "data science"]
categories = ["api-bindings", "science"]

[dependencies]
bytes = "0.4.12"
prost = "0.5.0"
prost-derive = "0.5.0"
prost-types = "0.5.0"
tonic = { version = "0.1.0-alpha.6", features = ["rustls"] }

[build-dependencies]
failure = "0.1.6"
walkdir = "2"
tonic-build = "0.1.0-alpha.6"
