[package]
name = "pachyderm"
version = "0.2.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "The official Pachyderm Rust library"
homepage = "https://pachyderm.io"
license = "Apache-2.0"
repository = "https://github.com/pachyderm/rust-pachyderm"
keywords = ["pachyderm", "kubernetes", "big-data", "analytics", "data-science"]
categories = ["api-bindings", "science"]

[dependencies]
bytes = "0.5.4"
prost = "0.6.1"
prost-derive = "0.6.1"
prost-types = "0.6.1"
tonic = "0.2.0"

# Dependencies for building protos
[build-dependencies]
failure = "0.1.7"
walkdir = "2"
tonic-build = "0.2.0"

# Dependencies for examples
[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = "0.3.4"
